Added theme help page

--- a/src/STGTour.DemoServerSide/Shared/NavMenu.razor
+++ b/src/STGTour.DemoServerSide/Shared/NavMenu.razor
@@ -7,21 +7,13 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
   <ul class="nav flex-column">
+
     <li class="nav-item px-3">
-      <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-        <span class="oi oi-home" aria-hidden="true"></span> Home
+      <NavLink class="nav-link" href="help/theme">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Theming
       </NavLink>
     </li>
-    <li class="nav-item px-3">
-      <NavLink class="nav-link" href="counter">
-        <span class="oi oi-plus" aria-hidden="true"></span> Counter
-      </NavLink>
-    </li>
-    <li class="nav-item px-3">
-      <NavLink class="nav-link" href="fetchdata">
-        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-      </NavLink>
-    </li>
+
     <li class="nav-item px-3">
       <NavLink class="nav-link" href="guidedtour">
         <span class="oi oi-list-rich" aria-hidden="true"></span> Guided Tour
