--- a/src/STGTour.DemoServerSide/Pages/_Host.cshtml
+++ b/src/STGTour.DemoServerSide/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
   <base href="~/" />
   <link rel="stylesheet" href="_content/GTour/css/styles.css" />
   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/styles/github-dark.min.css">
   <link href="css/site.css" rel="stylesheet" />
   <link href="STGTour.DemoServerSide.styles.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -31,9 +32,9 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.1.0/highlight.min.js"></script>
   <script src="_framework/blazor.server.js"></script>
-
+  <script>hljs.highlightAll();</script>
   <style>
     .guided-tour-wrapper[data-popper-placement^='top'] > .my-arrow {
       bottom: -12px;
