--- a/src/STGTour.DemoServerSide/Shared/NavMenu.razor
+++ b/src/STGTour.DemoServerSide/Shared/NavMenu.razor
@@ -9,6 +9,24 @@
   <ul class="nav flex-column">
 
     <li class="nav-item px-3">
+      <NavLink class="nav-link" href="help/arrow">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Arrow Element
+      </NavLink>
+    </li>
+
+    <li class="nav-item px-3">
+      <NavLink class="nav-link" href="help/overlay">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Overlay Element
+      </NavLink>
+    </li>
+
+    <li class="nav-item px-3">
+      <NavLink class="nav-link" href="help/service">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Service
+      </NavLink>
+    </li>
+
+    <li class="nav-item px-3">
       <NavLink class="nav-link" href="help/theme">
         <span class="oi oi-list-rich" aria-hidden="true"></span> Theming
       </NavLink>
