Added the help page tour & extra events on service

--- a/src/STGTour.DemoServerSide/Pages/HelpService.razor
+++ b/src/STGTour.DemoServerSide/Pages/HelpService.razor
@@ -131,7 +131,9 @@
         <li><span class="font-weight-bold">OnTourDeRegistered</span></li>
         <li><span class="font-weight-bold">OnTourStarting</span></li>
         <li><span class="font-weight-bold">OnTourStarted</span></li>
+        <li><span class="font-weight-bold">OnTourCanceling</span></li>
         <li><span class="font-weight-bold">OnTourCanceled</span></li>
+        <li><span class="font-weight-bold">OnTourCompleting</span></li>
         <li><span class="font-weight-bold">OnTourCompleted</span></li>
     </ul>
 </p>
