--- a/src/STGTour.DemoServerSide/Shared/NavMenu.razor
+++ b/src/STGTour.DemoServerSide/Shared/NavMenu.razor
@@ -33,6 +33,12 @@
     </li>
 
     <li class="nav-item px-3">
+      <NavLink class="nav-link" href="help/tour">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Tour
+      </NavLink>
+    </li>
+
+    <li class="nav-item px-3">
       <NavLink class="nav-link" href="guidedtour">
         <span class="oi oi-list-rich" aria-hidden="true"></span> Guided Tour
       </NavLink>
