Added tour step help and set tour step child context

--- a/src/GTour/Components/GuidedTourStep.razor
+++ b/src/GTour/Components/GuidedTourStep.razor
@@ -19,7 +19,7 @@
   }
 
   <div class="guided-tour-step-content @SelectedTheme.GTourStepContentWrapper @ContentClass">
-    @ChildContent
+    @ChildContent(this)
   </div>
 
   <div class="guided-tour-step-footer @SelectedTheme.GTourStepFooterWrapper @FooterClass">
