--- a/src/STGTour.DemoServerSide/Pages/HelpTour.razor
+++ b/src/STGTour.DemoServerSide/Pages/HelpTour.razor
@@ -21,7 +21,7 @@
 <br/>
 
 <pre>
-    <code class="language-cs">
+    <code class="language-html">
 
 @("<GuidedTour TourId=\"Tour1\" OverlayClass=\"overlay-class\" CloseOnOverlayClick=\"true\" ")
             HighlightClass="my-highlight-class" HighlightEnabled="true" TourWrapperClass="tour-wrapper-class"
