--- a/src/STGTour.DemoServerSide/Shared/NavMenu.razor
+++ b/src/STGTour.DemoServerSide/Shared/NavMenu.razor
@@ -39,8 +39,14 @@
     </li>
 
     <li class="nav-item px-3">
+      <NavLink class="nav-link" href="help/tourstep"> 
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Tour Steps
+      </NavLink>
+    </li>
+
+    <li class="nav-item px-3">
       <NavLink class="nav-link" href="guidedtour">
-        <span class="oi oi-list-rich" aria-hidden="true"></span> Guided Tour
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Guided Tour Demo
       </NavLink>
     </li>
   </ul>
