--- a/src/STGTour.DemoWASM/Shared/MainLayout.razor
+++ b/src/STGTour.DemoWASM/Shared/MainLayout.razor
@@ -6,7 +6,8 @@
     </div>
 
     <div class="main">
-        <div class="top-row px-4">
+        <div class="top-row ">
+            <a class="btn btn-info" role="button" href="https://github.com/TrevorMare/STGTour" target="_blank">Open Github Project</a>
             <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
         </div>
 
