Added Components lib

--- a/src/GTour/Components/GuidedTour.razor
+++ b/src/GTour/Components/GuidedTour.razor
@@ -2,9 +2,9 @@
 
 @if (OverlayEnabled && IsActive)
 {
-  <div @ref="OverlayElement" class="guided-tour-overlay @SelectedTheme.GTourOverlay @OverlayClass" @onclick="@(async (e) => { if (CloseOnOverlayClick) await TourService.CancelTour(); })"></div>
+  <div data-gtour-overlay="@TourId" @ref="OverlayElement" class="guided-tour-overlay @SelectedTheme.GTourOverlay @OverlayClass" @onclick="@(async (e) => { if (CloseOnOverlayClick) await TourService.CancelTour(); })"></div>
 }
-<div @ref="WrapperElement" hidden="@(!IsActive)" role="tooltip" class="guided-tour-wrapper @SelectedTheme.GTourWrapper @TourWrapperClass">
+<div data-gtour-wrapper="@TourId" @ref="WrapperElement" hidden="@(!IsActive)" role="tooltip" class="guided-tour-wrapper @SelectedTheme.GTourWrapper @TourWrapperClass">
   <CascadingValue Value=this>
     @ChildContent
   </CascadingValue>
@@ -13,7 +13,7 @@
   {
     if (ArrowContent == null)
     {
-      <div class="arrow @SelectedTheme.GTourArrow @ArrowClass" data-popper-arrow></div>
+      <div data-gtour-arrow="@TourId" class="arrow @SelectedTheme.GTourArrow @ArrowClass" data-popper-arrow></div>
     }
     else
     {
