--- a/src/STGTour.DemoServerSide/Pages/HelpTourStep.razor
+++ b/src/STGTour.DemoServerSide/Pages/HelpTourStep.razor
@@ -1,262 +1,3 @@
-@using GTour.Components
-@using GTour.Abstractions.Common
+@using STGTour.DemoComponents
 @page "/help/tourstep"
-
-<h2>Guided Tour Step Component</h2>
-
-<p>
-    The Guided Tour Step component is used to display additional information during the tour
-    and can target a specific element on the page.
-</p>
-
-<h3>Adding a Tour Step</h3>
-
-<p>
-    To add a tour step to a razor page, create a new component in the Guided Tour
-    ChildContent tag. Even though the sequence is not required to be set is highly advisable
-    that this property be set. The tour step name is also a required property that needs to be set.
-<br/>
-<br/>
-
-<pre>
-    <code class="language-html">
-
-@("<GuidedTour ...>")
-@("     <ChildContent>")
-@("         <GuidedTourStep")    
-           Title="Custom Buttons" StepName="stepName" TourStepSequence="1" ElementSelector="[data-element-to-select]"
-           CancelTourButtonClass="cancel-btn-class" CanCancelTour="false" HeaderClass="my-hdr-class" FooterClass="my-ftr-class"
-           ContentClass="my-content-class" CompleteTourButtonText="Complete Tour" CompleteTourButtonClass="complete-btn-class"
-           CancelTourButtonText="Cancel Tour" SkipStep="false" NextStepButtonClass="next-btn-class" NextStepButtonText="Next Step"
-           OnNavigateNext="@@((tourStep) => {})" OnNavigatePrevious="@@((tourStep) => {})" OnStepActivated="@@((tourStep) => {})" 
-           OnStepDeActivated="@@((tourStep) => {})" OnTourCanceled="@@((tourStep) => {})" OnTourCompleted="@@((tourStep) => {})"
-           PopupPlacement="PopperPlacement.Auto" PopupStrategy="PopperStrategy.Absolute" PreviousStepButtonClass="previous-btn-class" PreviousStepButtonText="Previous Step"
-           WrapperClass="my-step-wrapper">
-@("         <HeaderContent>")    
-@("             <div><span>My Header</span></div>")    
-@("         </HeaderContent>")    
-@("         <ChildContent>")    
-@("             <div>...</div>")    
-@("         </ChildContent>")    
-@("         <FooterContent>")    
-@("             <div>")    
-@("                 <button class=\"btn\" @onclick=\"@(() => context.GoToStep(\"firstStep\"))\">First Step</button>")    
-@("                 <button class=\"btn\" @onclick=\"@(() => context.PreviousStep())\">")    
-@("                     <i class=\"bi bi-cloud-drizzle\"></i><span>Prev</span>")    
-@("                 </button>")    
-@("                 <button class=\"btn\" @onclick=\"@(() => context.CompleteTour())\">Complete</button>")    
-@("             </div>")    
-@("         </FooterContent>")    
-@("     </GuidedTourStep>")    
-@("  </ChildContent>")
-@("</GuidedTour>")
-    </code>
-</pre>
-
-<br/>
-<br/>
-    <h3>Properties</h3>
-    <ul>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">StepName*</span>
-                <span class="font-style-italic">The unique name of the step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">StepName*</span>
-                <span class="font-style-italic">The unique name of the step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">TourStepSequence*</span>
-                <span class="font-style-italic">The sequence of this step within the tour</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">ElementSelector</span>
-                <span class="font-style-italic">Optional element selector for this step, this will set where this step is displayed</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">CancelTourButtonClass</span>
-                <span class="font-style-italic">An additional class to append to the default cancel tour button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">CancelTourButtonText</span>
-                <span class="font-style-italic">The text for the cancel tour button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">CanCancelTour</span>
-                <span class="font-style-italic">A value indicating if this step can cancel the tour</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">ChildContent</span>
-                <span class="font-style-italic">Custom content to render for the child step. The @@context variable can be used to reference the tour step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">CompleteTourButtonText</span>
-                <span class="font-style-italic">The text for the complete tour button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">CompleteTourButtonClass</span>
-                <span class="font-style-italic">An additional class to append to the default complete tour button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">ContentClass</span>
-                <span class="font-style-italic">An additional class to append to the content wrapper</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">FooterClass</span>
-                <span class="font-style-italic">An additional class to append to the footer wrapper.</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">FooterContent</span>
-                <span class="font-style-italic">Custom content to render as the footer. The @@context variable can be used to reference the tour step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">HeaderClass</span>
-                <span class="font-style-italic">An additional class to append to the header wrapper</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">HeaderContent</span>
-                <span class="font-style-italic">Custom content to be rendered in the header. The @@context variable can be used to reference the tour step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">NextStepButtonClass</span>
-                <span class="font-style-italic">An additional class to append to the default next step button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">NextStepButtonText</span>
-                <span class="font-style-italic">The text for the next step button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">PopupPlacement</span>
-                <span class="font-style-italic">The position of the tour step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">PopupStrategy</span>
-                <span class="font-style-italic">Can either be absolute or fixed</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">PreviousStepButtonClass</span>
-                <span class="font-style-italic">An additional class to append to the default previous step button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">PreviousStepButtonText</span>
-                <span class="font-style-italic">The text for the previous step button</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">SkipStep</span>
-                <span class="font-style-italic">A value indicating if the step should be skipped</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">Title</span>
-                <span class="font-style-italic">If a custom header is not supplied, this will be the title of the step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">WrapperClass</span>
-                <span class="font-style-italic">An additional class to append to the main wrapper</span>
-            </div>
-        </li>
-    </ul>
-
-    <h3>Callbacks</h3>
-
-    <ul>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">OnNavigateNext</span>
-                <span class="font-style-italic">A callback for the tour is navigating to the next step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">OnNavigatePrevious</span>
-                <span class="font-style-italic">A callback for the tour is navigating to the previous step</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">OnStepActivated</span>
-                <span class="font-style-italic">A callback for when the tour has been activated</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">OnStepDeActivated</span>
-                <span class="font-style-italic">A callback for when this step has been de-activated</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">OnTourCanceled</span>
-                <span class="font-style-italic">A callback for when the tour is canceled</span>
-            </div>
-        </li>
-        <li>
-            <div class="d-flex flex-column">
-                <span class="font-weight-bold">OnTourCompleted</span>
-                <span class="font-style-italic">A callback for when the tour is completed</span>
-            </div>
-        </li>
-    </ul>
-
-</p>
-
-@code {
-    [Inject]
-    private GTour.Abstractions.IGTourService GTourService { get; set; }
-
-    [Inject]
-    private IJSRuntime JSRuntime { get; set; }
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        base.OnAfterRender(firstRender);
-        await JSRuntime.InvokeVoidAsync("higlightCode");
-    }
-   
-}
+<HelpTourStep></HelpTourStep>
