Fixed razor references

--- a/src/STGTour.DemoComponents/Pages/HelpGuidedTourComponent.razor
+++ b/src/STGTour.DemoComponents/Pages/HelpGuidedTourComponent.razor
@@ -72,10 +72,8 @@
   <button data-form-submit class="btn btn-primary" type="submit">Submit form</button>
 </form>
 
-<DemoComponents.Shared.FormGuidedTour></DemoComponents.Shared.FormGuidedTour>
-
-<DemoComponents.Shared.ScrollGuidedTour></DemoComponents.Shared.ScrollGuidedTour>
-
+<STGTour.DemoComponents.Shared.FormGuidedTour></STGTour.DemoComponents.Shared.FormGuidedTour>
+<STGTour.DemoComponents.Shared.ScrollGuidedTour></STGTour.DemoComponents.Shared.ScrollGuidedTour>
 
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action active">
