--- a/src/STGTour.DemoServerSide/Pages/HelpService.razor
+++ b/src/STGTour.DemoServerSide/Pages/HelpService.razor
@@ -1,4 +1,4 @@
-@using STGTour.DemoComponents
+
 
 @page "/help/service"
-<HelpService></HelpService>
+<HelpServiceComponent></HelpServiceComponent>
