--- a/src/STGTour.DemoServerSide/Pages/HelpTourStep.razor
+++ b/src/STGTour.DemoServerSide/Pages/HelpTourStep.razor
@@ -1,3 +1,2 @@
-@using STGTour.DemoComponents
 @page "/help/tourstep"
-<HelpTourStep></HelpTourStep>
+<HelpTourStepComponent></HelpTourStepComponent>
