--- a/src/STGTour.DemoServerSide/Pages/OverlayHelp.razor
+++ b/src/STGTour.DemoServerSide/Pages/OverlayHelp.razor
@@ -1,4 +1,3 @@
-@using STGTour.DemoComponents
 
 @page "/help/overlay"
-<OverlayHelp></OverlayHelp> 
+<OverlayHelpComponent></OverlayHelpComponent> 
