--- a/src/STGTour.DemoServerSide/_Imports.razor
+++ b/src/STGTour.DemoServerSide/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using STGTour.DemoServerSide
 @using STGTour.DemoServerSide.Shared
+@using STGTour.DemoComponents.Pages
