--- a/src/STGTour.DemoWASM/Pages/HelpGuidedTour.razor
+++ b/src/STGTour.DemoWASM/Pages/HelpGuidedTour.razor
@@ -1,4 +1,4 @@
-﻿@using STGTour.DemoComponents
+﻿
 @page "/guidedtour"
 
-<HelpGuidedTour></HelpGuidedTour>
+<HelpGuidedTourComponent></HelpGuidedTourComponent>
