--- a/src/STGTour.DemoComponents/Pages/HelpThemeComponent.razor
+++ b/src/STGTour.DemoComponents/Pages/HelpThemeComponent.razor
@@ -40,9 +40,9 @@
 
 <h3>Pre-built Themes</h3>
 
-<button class="btn btn-primary" @onclick="StartNoThemeTour">View None Theme</button>
-<button class="btn btn-primary" @onclick="StartDefaultThemeTour">View Default Theme</button>
-<button class="btn btn-primary" @onclick="StartBootstrapThemeTour">View Bootstrap Theme</button>
+<button data-e2e="btn_none_theme" class="btn btn-primary" @onclick="StartNoThemeTour">View None Theme</button>
+<button data-e2e="btn_default_theme" class="btn btn-primary" @onclick="StartDefaultThemeTour">View Default Theme</button>
+<button data-e2e="btn_bootstrap_theme" class="btn btn-primary" @onclick="StartBootstrapThemeTour">View Bootstrap Theme</button>
 <br/>
 <br/>
 
