Initial Tests and Index for Google Search

--- a/src/STGTour.DemoWASM/Pages/Index.razor
+++ b/src/STGTour.DemoWASM/Pages/Index.razor
@@ -1,7 +1,25 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>STGTour.GTour</h1>
 
-Welcome to your new app.
+<p>
+    Welcome to STGTour.GTour Blazor Guided UI Tour Service. 
+    This package was inspired by all the Angular npm packages that are so freely available for quick starts and not so much for Blazor. 
+</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Purpose</h1>
+
+<p>
+    The STGTour GTour package is a customizable UI Tour Component intented to help onboarding users within your Blazor application by giving them a chance to interact
+    with your system while showing them important tips and how to's. A tour can be started at any time and it's up to the developer
+    to decide when and how it's started. It can be used to show specific sequences required by an application or just a general feel of
+    where to find controls and general functionality
+</p>
+
+<h1>Demo</h1>
+
+<p>
+    Navigate around the site to see some demos and documentation on how to use the Tour and Tour Steps. 
+</p>
+
+
